--- a/stylePageOne.css
+++ b/stylePageOne.css
@@ -170,11 +170,11 @@ body {
 /* Home Slider */
 .home__slider {
     width: 100%;
-    height: 90% !important;
+    height: 90%;
 }
 
-#control__left,
-#control__right {
+.control__left,
+.control__right {
     font-size: 2.5em;
     color: rgb(66, 65, 65);
 }
@@ -209,8 +209,21 @@ body {
     width: 100%;
 }
 
-.card-img-top {
+.card__img img:nth-child(1) {
     cursor: pointer;
+}
+
+.card__img img:nth-child(2) {
+    cursor: pointer;
+    display: none;
+}
+
+.card__img:hover img:nth-child(1) {
+    display: none;
+}
+
+.card__img:hover img:nth-child(2) {
+    display: block;
 }
 
 .card-body {
@@ -227,7 +240,7 @@ body {
     margin-bottom: 5px;
 }
 
-/* extend */
+/* choose color */
 .choose__color {
     width: 50%;
     max-width: 70%;
@@ -244,7 +257,7 @@ body {
 }
 
 .color__item1 {
-    background: url(./images/pageOneImages/color_xanh_ath011_38a604a406d64fb58405ee9934d0aeda.jpg) no-repeat;
+    background: url(./images/pageOneImages/color_trang_ath010_7c2f55353c844e2a81d162cab800b60e.jpg) no-repeat;
     background-size: contain;
     border-top-left-radius: 5%;
     border-top-right-radius: 5%;
@@ -253,7 +266,7 @@ body {
 }
 
 .color__item2 {
-    background: url(./images/pageOneImages/color_hong_ath010_b8a245f9f08f4513addf9021dffb4523.jpg) no-repeat;
+    background: url(./images/pageOneImages/color_xanh_ath011_38a604a406d64fb58405ee9934d0aeda.jpg) no-repeat;
     background-size: contain;
     border-top-left-radius: 5%;
     border-top-right-radius: 5%;
@@ -262,7 +275,7 @@ body {
 }
 
 .color__item3 {
-    background: url(./images/pageOneImages/color_vang_ath014_63a292c65787466b99aa857a0f1415a5.jpg) no-repeat;
+    background: url(./images/pageOneImages/color_hong_ath010_b8a245f9f08f4513addf9021dffb4523.jpg) no-repeat;
     background-size: contain;
     border-top-left-radius: 5%;
     border-top-right-radius: 5%;
@@ -286,6 +299,238 @@ body {
     left: 10%;
 }
 
+/* extend */
+.extend {
+    margin-top: 2.5em;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 3em;
+    border-bottom: 1px solid rgb(196, 193, 193);
+}
+
+.extend span:hover {
+    border-bottom: 1px solid #333;
+    cursor: pointer;
+}
+
+
+/* section 2 */
+.section2 {
+    width: 86%;
+    margin: 50px auto;
+    border-bottom: 1px solid rgb(196, 193, 193);
+}
+
+/* s2 - title */
+.s2__title {
+    width: 100%;
+    margin-bottom: 2em;
+    text-align: center;
+}
+
+/* s2 - card */
+.section2 .card__item {
+    border: none;
+}
+
+.section2 .card-body {
+    padding-bottom: 1.5em;
+}
+
+.section2 .card-img-top {
+    cursor: pointer;
+}
+
+.section2 .card-title {
+    margin-top: 1em;
+}
+
+.section2 .card-title span:hover {
+    border-bottom: 1px solid rgb(196, 193, 193);
+    cursor: pointer;
+}
+
+
+/* section 3 */
+.section3 {
+    width: 100%;
+    height: auto;
+    margin: 50px auto;
+}
+
+/* title */
+.s3__title {
+    width: 100%;
+    text-align: center;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+/* slider */
+.s3__slider {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.video__card {
+    width: 100%;
+    height: 80vh;
+}
+
+.video__card video {
+    width: 100%;
+    height: 100%;
+}
+
+.cart__video__item {
+    width: 100%;
+    height: 100%;
+}
+
+.section3 .fa-chevron-left, .section3 .fa-chevron-right {
+    font-size: 2.4em;
+}
+
+.carousel-caption {
+    width: 60%;
+    margin: 0 auto;
+}
+
+
+/* Section 4 */
+.section4 {
+    width: 86%;
+    margin: 6em auto 8em;
+}
+
+/* title */
+.s4__title {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2em;
+}
+
+/* card */
+.section4 .card__item {
+    border: none;
+}
+
+
+/* section 5 */
+.section5 {
+    width: 86%;
+    margin: 50px auto;
+}
+
+/* title */
+.s5__title {
+    width: 100%;
+    text-align: center;
+    margin: 2em auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.s5__title .title__line__left, .s5__title .title__line__right {
+    height: 1px;
+    width: 35%;
+    max-width: 40%;
+    background-color: rgb(196, 193, 193);
+}
+
+/* card */
+.section5 .card__img:hover img:nth-child(1) {
+    display: unset;
+}
+
+.section5 .card__item {
+    border: none;
+}
+
+
+/* Footer */
+.footer {
+    width: 100%;
+}
+
+.footer__container {
+    width: 86%;
+    margin: 6em auto 2.5em;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 2em;
+    border-top: 1px solid rgb(196, 193, 193);
+}
+
+.hotline div {
+    line-height: 0.5em;
+}
+
+.footer span {
+    font-size: 0.8em;
+}
+
+.showroom__system .address__showroom:hover {
+    cursor: pointer;
+    border-bottom: 1px solid rgb(196, 193, 193);
+}
+
+/* .fanpage {
+    width: 30%;
+    max-width: 30%;
+} */
+
+.img__fanpage {
+    cursor: pointer;
+    width: 100%;
+    height: 80%;
+    background: url(./images/pageOneImages/kv-sale-ngan-lac-quan-700x330_b2f7a865cc9348ecb810ed8ae4c9f911.jpg) no-repeat;
+    background-size: 100%;
+}
+
+.fanpage i {
+    cursor: pointer;
+}
+
+/* company name */
+.company__name {
+    width: 100%;
+    margin: 4em auto 2em;
+    text-align: center;
+}
+
+.company__name span:hover {
+    cursor: pointer;
+    border-bottom: 1px solid rgb(196, 193, 193);
+}
+
+
+/* hotline mobile */
+.hotline__overlay {
+    width: 100%;
+    text-align: center;
+    display: none;
+}
+
+.hotline__overlay .fa-sort-up {
+    font-size: 2em;
+}
+
+.hotline__extend {
+    width: 100%;
+    text-align: center;
+    display: none;
+}
+
+.hotline__extend .hotline__extend__click {
+    font-size: 1.2em;
+}
+
+.hotline__extend .hotline__extend__click:hover {
+    cursor: pointer;
+    border-bottom: 1px solid rgb(196, 193, 193);
+}
 
 
 
@@ -519,7 +764,14 @@ body {
         margin: 0 5.67%;
         cursor: pointer;
     }
+
+    /* footer */
+    .footer {
+        font-size: 0.85em;
+    }
+
 }
+
 
 /* Tablet */
 @media (min-width: 46.25em) and (max-width: 64em) {
@@ -554,6 +806,44 @@ body {
         /* display: none; */
         font-size: 1.2em;
     }
+
+    /* container-content */
+
+    /* section 1 */
+    .s1__title p {
+        display: none;
+    }
+
+    /* section 4 */
+    .section4 {
+        margin: 2.5em auto;
+    }
+
+    /* footer */
+    .hotline {
+        width: 100%;
+        text-align: center;
+        display: none;
+    }
+
+    .showroom__system {
+        display: none;
+    }
+
+    .fanpage {
+        display: none;
+    }
+
+    /* extend */
+
+    .hotline__extend {
+        display: block;
+    }
+
+    .company__name {
+        display: none;
+    }
+
 }
 
 
